@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Tangram
-version:      2.07pre4
+version:      2.07
 version_from: Tangram.pm
 installdirs:  site
 requires:
